# stocky

./: .env  README.md  main.py  pyproject.toml
stocky/: api.py
stocky/account/command/: api.py  payloads.py  producer.py
stocky/account/evs/: __init__.py  application.py
stocky/account/query/: api.py
stocky/command/account/: __init__.py  api.py  application.py  domain.py  payloads.py  producer.py
stocky/common/config/: __init__.py  store.py
stocky/common/evs/: __init__.py  application.py  domain.py  producer.py
stocky/config/: __init__.py
stocky/query/account/: api.py
