[tool.poetry]
name = "stocky"
version = "0.1.0"
description = "event sourcing and signal processing poc"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
eventsourcing = {extras = ["crypto"], version = "^9.0.2"}
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
